--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^6.2.1"
     },
     "dependencies": {
-        "apexcharts": "^3.49.1"
+        "apexcharts": "^3.49.1",
+        "chart.js": "^4.4.8"
     }
 }
