--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.4",
+        "mike42/escpos-php": "^2.2",
         "phpmailer/phpmailer": "^6.9",
         "phpoffice/phpword": "^1.2",
         "simplesoftwareio/simple-qrcode": "^4.2",
