--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.4",
         "mike42/escpos-php": "^2.2",
+        "milon/barcode": "^12.0",
         "phpmailer/phpmailer": "^6.9",
         "phpoffice/phpword": "^1.2",
         "simplesoftwareio/simple-qrcode": "^4.2",
